--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Ionic - Switch Themes</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 
   <ion-pane>
     <ion-header-bar ng-class="'bar-' + appTheme">
-      <h1 class="title">myNetwork</h1>
+      <h1 class="title">Ionic - Switch Themes</h1>
     </ion-header-bar>
     <ion-header-bar class="bar-subheader" ng-class="'bar-' + appTheme">
       <h1 class="title">Subheader</h1>
